test/tests/operators/flatten/error_separator_type.txt
error: argument `separator` must be of type `string` (got `int64`)
 --> tests/operators/flatten/error_separator_type.tql:6:9
  |
6 | flatten 5
  |         ^ 
  |
